# entity-relation-extraction

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/models/: api.py  entity.py  relationship.py
app/services/: entity.py  langchain.py  neo4j.py  relationship.py  util.py
